<resources>
    <string name="app_name">Resabev</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nome do Usuario</string>
    <string name="nav_header_subtitle">Funcoes</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_subtitleid">ID: 007070</string>
    <string name="nav_header_logout">Sair</string>

    <string name="menu_home">Home</string>
    <string name="menu_recipes">Receitas</string>
    <string name="menu_history">Histórico</string>
    <string name="menu_user">Usuário</string>
    <string name="menu_storage">Armazenamento</string>
    <string name="menu_settings">Configurações</string>
    <string name="title_activity_main2">activity_main2</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dark_mode">Modo Escuro</string>
    <string name="version">0.1</string>
    <string name="sync">Sincronização</string>
    <string name="onlineoffile">Online</string>
    <string name="backup">25 seg atrás</string>
</resources>