<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <include
        android:id="@+id/include2"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/fundoMenu"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"
        app:theme="@style/myNavigationDrawerStyle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparente">

            <View
                android:id="@+id/view"
                android:layout_width="248dp"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="476dp"
                android:background="@android:color/darker_gray"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp"
                android:background="@color/transparente"
                android:clickable="true"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparente">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardSync"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:cardBackgroundColor="@color/fundoCardProfile"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/transparente">

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/guideline2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal" />

                            <ImageView
                                android:id="@+id/imageprofile"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginBottom="20dp"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/nav_header_desc"
                                android:cropToPadding="false"
                                android:paddingTop="@dimen/nav_header_vertical_spacing"
                                android:scaleType="centerCrop"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.593"
                                app:srcCompat="@drawable/ic_cloudon"
                                tools:ignore="MissingConstraints" />

                            <TextView
                                android:id="@+id/nameuser"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="28dp"
                                android:fontFamily="More Fonts..."
                                android:paddingTop="@dimen/nav_header_vertical_spacing"
                                android:text="@string/sync"
                                android:textAlignment="viewEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/imageprofile"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.378" />

                            <TextView
                                android:id="@+id/funcaoprofile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/onlineoffile"
                                android:textColor="@color/textSecondary"
                                android:textSize="7sp"
                                android:visibility="visible"
                                app:layout_constraintStart_toStartOf="@+id/nameuser"
                                app:layout_constraintTop_toBottomOf="@+id/nameuser" />

                            <TextView
                                android:id="@+id/textbackup"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_marginEnd="3dp"
                                android:text="@string/backup"
                                android:textColor="@color/textSecondary"
                                android:textSize="10sp"
                                android:visibility="visible"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:cardBackgroundColor="@color/fundoMenu"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardSync">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imagedarkmode"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginBottom="20dp"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/nav_header_desc"
                                android:cropToPadding="false"
                                android:paddingTop="@dimen/nav_header_vertical_spacing"
                                android:scaleType="centerCrop"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/ic_darkmode"
                                tools:ignore="MissingConstraints" />

                            <TextView
                                android:id="@+id/textversion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:layout_marginBottom="3dp"
                                android:text="@string/version"
                                android:textColor="@color/textSecondary"
                                android:textSize="12sp"
                                android:visibility="visible"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent" />

                            <TextView
                                android:id="@+id/textdarkmode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:fontFamily="@font/roboto"
                                android:paddingTop="@dimen/nav_header_vertical_spacing"
                                android:text="@string/dark_mode"
                                android:textAlignment="viewEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/imagedarkmode"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.navigation.NavigationView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fundo">




        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:foreground="@color/transparente"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/appbarambev" />

        <TextView
            android:id="@+id/txtVerTodasReceitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:text="Ver todas as receitas"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.drawerlayout.widget.DrawerLayout>